@@ -79,8 +79,8 @@ Array
 
 Array
 (
-    [DBL] => 1.000000
-    [0] => 1.000000
+    [DBL] => 1
+    [0] => 1
 )
 
 Array
@@ -103,10 +103,10 @@ Array
     [1] => ABC
     [NUM] => 12.340
     [2] => 12.340
-    [DBL] => 1.000000
-    [3] => 1.000000
-    [FLT] => 2.000000
-    [4] => 2.000000
+    [DBL] => 1
+    [3] => 1
+    [FLT] => 2
+    [4] => 2
     [TS] => 2023-03-24 17:39:00
     [5] => 2023-03-24 17:39:00
     [MYDATE] => 2023-03-24
